# PAT02

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  fix_async_saver.py  requirements.txt
ai-services/: test_rag_integration.py
ai-services/indexer/: Dockerfile  README.md  indexer.py  requirements.txt  test_indexer.py
ai-services/indexer/processors/: __init__.py  image_processor.py  pdf_processor.py  text_processor.py
ai-services/langgraph/: Dockerfile  README.md  config.py  main.py  requirements.txt  schemas.py
ai-services/langgraph/graphs/: __init__.py  conversation_graph.py  conversation_graph.py.fixed
ai-services/langgraph/nodes/: __init__.py  action_executor.py  action_planner.py  context_retriever.py  message_processor.py  rag_search.py  report_generator.py  response_generator.py
ai-services/langgraph/templates/: report_templates.js
ai-services/langgraph/tests/: test_report_generation.py
ai-services/langgraph/utils/: __init__.py  logging_config.py  mcp_client.py
ai-services/mcp/: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_GUIDE.md  Makefile  README.md  auth.py  config.py  pytest.ini  requirements-dev.txt  requirements.txt  server.py
ai-services/mcp/schemas/: __init__.py  auth.py  base.py  conversation.py  equipment.py  fsm.py  knowledge.py  mcp.py
ai-services/mcp/scripts/: quick_start.py  validate_mcp_server.py
ai-services/mcp/tests/: __init__.py  conftest.py  test_integration.py  test_server.py  test_tools.py  test_utils.py
ai-services/mcp/tools/: __init__.py  base.py  conversation_tools.py  equipment_tools.py  fsm_tools.py  knowledge_tools.py  report_tools.py
ai-services/mcp/utils/: __init__.py  auth.py  db_client.py  logging_config.py  odoo_client.py  rate_limiter.py
ai-services/postgres-pgvector/: Dockerfile  README.md  init-pgvector.sql
ai-services/prompts/: system_prompts.yaml
config/: README.md
documentation/: guia-de-instalacion.md  guia-docker.md  guia-git.md  guia-tecnica-general.md
extra-addons/OCA/account-closing/: README.md
extra-addons/OCA/account-closing/setup/_metapackage/: pyproject.toml
extra-addons/OCA/account-financial-reporting/: README.md
extra-addons/OCA/account-invoicing/: README.md
extra-addons/OCA/account-payment/: README.md  eslint.config.cjs  requirements.txt
extra-addons/OCA/agreement/: README.md
extra-addons/OCA/agreement/setup/_metapackage/: pyproject.toml
extra-addons/OCA/bank-payment/: README.md
extra-addons/OCA/bank-payment-alternative/: README.md
extra-addons/OCA/bank-payment-alternative/setup/_metapackage/: pyproject.toml
extra-addons/OCA/bank-payment/setup/_metapackage/: pyproject.toml
extra-addons/OCA/connector/: README.md
extra-addons/OCA/contract/: README.md
extra-addons/OCA/credit-control/: README.md
extra-addons/OCA/credit-control/setup/_metapackage/: pyproject.toml
extra-addons/OCA/field-service/: README.md
extra-addons/OCA/field-service/setup/_metapackage/: pyproject.toml
extra-addons/OCA/fieldservice_skill/: README.rst  __manifest__.py
extra-addons/OCA/helpdesk/: README.md  eslint.config.cjs
extra-addons/OCA/hr/: README.md  requirements.txt
extra-addons/OCA/hr-holidays/: README.md
extra-addons/OCA/hr-holidays/setup/_metapackage/: pyproject.toml
extra-addons/OCA/knowledge/: README.md
extra-addons/OCA/mail/: README.md  requirements.txt  test-requirements.txt
extra-addons/OCA/maintenance/: .gitignore  README.md
extra-addons/OCA/maintenance/setup/_metapackage/: pyproject.toml
extra-addons/OCA/partner-contact/: README.md  requirements.txt
extra-addons/OCA/payroll/: README.md
extra-addons/OCA/pos/: README.md
extra-addons/OCA/pos/setup/_metapackage/: pyproject.toml
extra-addons/OCA/product-pack/: README.md
extra-addons/OCA/product-pack/setup/_metapackage/: pyproject.toml
extra-addons/OCA/product-variant/: README.md
extra-addons/OCA/product-variant/setup/_metapackage/: pyproject.toml
extra-addons/OCA/project/: README.md
extra-addons/OCA/purchase-reporting/: README.md
extra-addons/OCA/purchase-reporting/setup/_metapackage/: pyproject.toml
extra-addons/OCA/purchase-workflow/: README.md
extra-addons/OCA/reporting-engine/: README.md  requirements.txt
extra-addons/OCA/sale-channel/: README.md
extra-addons/OCA/server-brand/: README.md
extra-addons/OCA/server-env/: README.md  requirements.txt  test-requirements.txt
extra-addons/OCA/server-tool/: README.md  requirements.txt  test-requirements.txt
extra-addons/OCA/stock-logistics-availability/: README.md
extra-addons/OCA/stock-logistics-availability/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-barcode/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-putaway/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-release-channel/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-request/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-reservation/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-tracking/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-warehouse/setup/_metapackage/: pyproject.toml
extra-addons/OCA/stock-logistics-workflow/setup/_metapackage/: pyproject.toml
extra-addons/OCA/timesheet/setup/_metapackage/: pyproject.toml
extra-addons/OCA/web/: README.md  (+3 more)
extra-addons/andessuyo_base/: __manifest__.py
extra-addons/andessuyo_base_nativo/: __manifest__.py
extra-addons/andessuyo_base_oca/: __manifest__.py
extra-addons/patco_ai/: README.md  README.rst  __init__.py  __manifest__.py
extra-addons/patco_base_nativo/: __manifest__.py
extra-addons/patco_base_oca/: __manifest__.py
extra-addons/patco_equipment/: __manifest__.py
extra-addons/patco_fsm_employee/: __manifest__.py
extra-addons/patco_informe/: __manifest__.py
extra-addons/patco_manuales/: __manifest__.py
extra-addons/patco_non_functional/: __manifest__.py
extra-addons/patco_reports/: __manifest__.py
extra-addons/patco_ux/: __manifest__.py
scripts/: README.md  fix-websockets.ps1  fix-websockets.sh
(+7847 files in other folders)
