[project]
name = "odoo-addons-oca-account-closing"
version = "18.0.20250912.0"
dependencies = [
    "odoo-addon-account_cutoff_accrual_subscription==18.0.*",
    "odoo-addon-account_cutoff_base==18.0.*",
    "odoo-addon-account_cutoff_picking==18.0.*",
    "odoo-addon-account_cutoff_start_end_dates==18.0.*",
    "odoo-addon-account_fiscal_year_closing==18.0.*",
    "odoo-addon-account_invoice_start_end_dates==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
