[project]
name = "odoo-addons-oca-bank-payment"
version = "18.0.20251030.0"
dependencies = [
    "odoo-addon-account_banking_mandate==18.0.*",
    "odoo-addon-account_banking_mandate_contact==18.0.*",
    "odoo-addon-account_banking_mandate_sale==18.0.*",
    "odoo-addon-account_banking_mandate_sale_contact==18.0.*",
    "odoo-addon-account_banking_pain_base==18.0.*",
    "odoo-addon-account_banking_sepa_credit_transfer==18.0.*",
    "odoo-addon-account_banking_sepa_direct_debit==18.0.*",
    "odoo-addon-account_invoice_select_for_payment==18.0.*",
    "odoo-addon-account_payment_mode==18.0.*",
    "odoo-addon-account_payment_order==18.0.*",
    "odoo-addon-account_payment_order_grouped_output==18.0.*",
    "odoo-addon-account_payment_order_notification==18.0.*",
    "odoo-addon-account_payment_order_return==18.0.*",
    "odoo-addon-account_payment_order_tier_validation==18.0.*",
    "odoo-addon-account_payment_partner==18.0.*",
    "odoo-addon-account_payment_purchase==18.0.*",
    "odoo-addon-account_payment_purchase_stock==18.0.*",
    "odoo-addon-account_payment_sale==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
