[project]
name = "odoo-addons-oca-field-service"
version = "18.0.20251001.0"
dependencies = [
    "odoo-addon-base_territory==18.0.*",
    "odoo-addon-fieldservice==18.0.*",
    "odoo-addon-fieldservice_account==18.0.*",
    "odoo-addon-fieldservice_activity==18.0.*",
    "odoo-addon-fieldservice_agreement==18.0.*",
    "odoo-addon-fieldservice_availability==18.0.*",
    "odoo-addon-fieldservice_calendar==18.0.*",
    "odoo-addon-fieldservice_crm==18.0.*",
    "odoo-addon-fieldservice_equipment_stock==18.0.*",
    "odoo-addon-fieldservice_equipment_warranty==18.0.*",
    "odoo-addon-fieldservice_kanban_info==18.0.*",
    "odoo-addon-fieldservice_portal==18.0.*",
    "odoo-addon-fieldservice_project==18.0.*",
    "odoo-addon-fieldservice_recurring==18.0.*",
    "odoo-addon-fieldservice_repair==18.0.*",
    "odoo-addon-fieldservice_route==18.0.*",
    "odoo-addon-fieldservice_route_availability==18.0.*",
    "odoo-addon-fieldservice_sale==18.0.*",
    "odoo-addon-fieldservice_sale_agreement==18.0.*",
    "odoo-addon-fieldservice_sale_agreement_equipment_stock==18.0.*",
    "odoo-addon-fieldservice_sale_recurring==18.0.*",
    "odoo-addon-fieldservice_sale_recurring_agreement==18.0.*",
    "odoo-addon-fieldservice_sale_stock==18.0.*",
    "odoo-addon-fieldservice_size==18.0.*",
    "odoo-addon-fieldservice_skill==18.0.*",
    "odoo-addon-fieldservice_stage_server_action==18.0.*",
    "odoo-addon-fieldservice_stock==18.0.*",
    "odoo-addon-fieldservice_vehicle==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
