[project]
name = "odoo-addons-oca-hr-holidays"
version = "18.0.20251030.0"
dependencies = [
    "odoo-addon-hr_holidays_leave_repeated==18.0.*",
    "odoo-addon-hr_holidays_natural_period==18.0.*",
    "odoo-addon-hr_holidays_public==18.0.*",
    "odoo-addon-hr_holidays_public_city==18.0.*",
    "odoo-addon-hr_holidays_settings==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
