[project]
name = "odoo-addons-oca-maintenance"
version = "18.0.20250924.0"
dependencies = [
    "odoo-addon-base_maintenance==18.0.*",
    "odoo-addon-base_maintenance_group==18.0.*",
    "odoo-addon-maintenance_equipment_category_hierarchy==18.0.*",
    "odoo-addon-maintenance_equipment_hierarchy==18.0.*",
    "odoo-addon-maintenance_equipment_sequence==18.0.*",
    "odoo-addon-maintenance_equipment_status==18.0.*",
    "odoo-addon-maintenance_equipment_tags==18.0.*",
    "odoo-addon-maintenance_equipment_usage==18.0.*",
    "odoo-addon-maintenance_product==18.0.*",
    "odoo-addon-maintenance_project==18.0.*",
    "odoo-addon-maintenance_request_employee==18.0.*",
    "odoo-addon-maintenance_request_purchase==18.0.*",
    "odoo-addon-maintenance_request_repair==18.0.*",
    "odoo-addon-maintenance_request_sequence==18.0.*",
    "odoo-addon-maintenance_request_tags==18.0.*",
    "odoo-addon-maintenance_security==18.0.*",
    "odoo-addon-maintenance_timesheet==18.0.*",
    "odoo-addon-maintenance_timesheet_time_control==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
