[project]
name = "odoo-addons-oca-product-pack"
version = "18.0.20250717.0"
dependencies = [
    "odoo-addon-product_pack==18.0.*",
    "odoo-addon-purchase_product_pack==18.0.*",
    "odoo-addon-sale_product_pack==18.0.*",
    "odoo-addon-sale_stock_product_pack==18.0.*",
    "odoo-addon-stock_product_pack==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
