[project]
name = "odoo-addons-oca-purchase-reporting"
version = "18.0.20250605.2"
dependencies = [
    "odoo-addon-purchase_comment_template==18.0.*",
    "odoo-addon-purchase_packaging_report==18.0.*",
    "odoo-addon-purchase_report_date_format==18.0.*",
    "odoo-addon-purchase_report_shipping_address==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
