[project]
name = "odoo-addons-oca-stock-logistics-release-channel"
version = "18.0.20250724.0"
dependencies = [
    "odoo-addon-sale_stock_release_channel==18.0.*",
    "odoo-addon-sale_stock_release_channel_delivery==18.0.*",
    "odoo-addon-sale_stock_release_channel_delivery_date==18.0.*",
    "odoo-addon-stock_release_channel==18.0.*",
    "odoo-addon-stock_release_channel_auto_release==18.0.*",
    "odoo-addon-stock_release_channel_cutoff==18.0.*",
    "odoo-addon-stock_release_channel_delivery==18.0.*",
    "odoo-addon-stock_release_channel_partner_address==18.0.*",
    "odoo-addon-stock_release_channel_partner_delivery_window==18.0.*",
    "odoo-addon-stock_release_channel_plan==18.0.*",
    "odoo-addon-stock_release_channel_plan_process_end_time==18.0.*",
    "odoo-addon-stock_release_channel_plan_shipment_lead_time==18.0.*",
    "odoo-addon-stock_release_channel_process_end_time==18.0.*",
    "odoo-addon-stock_release_channel_shipment_advice==18.0.*",
    "odoo-addon-stock_release_channel_shipment_lead_time==18.0.*",
    "odoo-addon-stock_release_channel_warehouse_calendar==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
