[project]
name = "odoo-addons-oca-stock-logistics-request"
version = "18.0.20250903.0"
dependencies = [
    "odoo-addon-stock_request==18.0.*",
    "odoo-addon-stock_request_bom==18.0.*",
    "odoo-addon-stock_request_kanban==18.0.*",
    "odoo-addon-stock_request_mrp==18.0.*",
    "odoo-addon-stock_request_purchase==18.0.*",
    "odoo-addon-stock_request_tier_validation==18.0.*",
    "odoo-addon-stock_return_request==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
