[project]
name = "odoo-addons-oca-stock-logistics-reservation"
version = "18.0.20251030.0"
dependencies = [
    "odoo-addon-sale_stock_available_to_promise_release==18.0.*",
    "odoo-addon-sale_stock_available_to_promise_release_dropshipping==18.0.*",
    "odoo-addon-stock_available_to_promise_release==18.0.*",
    "odoo-addon-stock_available_to_promise_release_carrier_alternative==18.0.*",
    "odoo-addon-stock_available_to_promise_release_dynamic_routing==18.0.*",
    "odoo-addon-stock_available_to_promise_release_exclude_location==18.0.*",
    "odoo-addon-stock_move_auto_assign==18.0.*",
    "odoo-addon-stock_reserve_rule==18.0.*",
    "odoo-addon-stock_rule_reserve_max_quantity==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
