[project]
name = "odoo-addons-oca-stock-logistics-warehouse"
version = "18.0.20251023.2"
dependencies = [
    "odoo-addon-account_move_line_stock_info==18.0.*",
    "odoo-addon-procurement_auto_create_group==18.0.*",
    "odoo-addon-product_route_profile==18.0.*",
    "odoo-addon-stock_archive_constraint==18.0.*",
    "odoo-addon-stock_change_qty_reason==18.0.*",
    "odoo-addon-stock_cycle_count==18.0.*",
    "odoo-addon-stock_demand_estimate==18.0.*",
    "odoo-addon-stock_demand_estimate_matrix==18.0.*",
    "odoo-addon-stock_inventory==18.0.*",
    "odoo-addon-stock_inventory_count_to_zero==18.0.*",
    "odoo-addon-stock_inventory_discrepancy==18.0.*",
    "odoo-addon-stock_inventory_lockdown==18.0.*",
    "odoo-addon-stock_inventory_preparation_filter==18.0.*",
    "odoo-addon-stock_inventory_verification_request==18.0.*",
    "odoo-addon-stock_location_bin_name==18.0.*",
    "odoo-addon-stock_location_children==18.0.*",
    "odoo-addon-stock_location_empty==18.0.*",
    "odoo-addon-stock_location_fill_state==18.0.*",
    "odoo-addon-stock_location_fill_state_qty_picked==18.0.*",
    "odoo-addon-stock_location_is_sublocation==18.0.*",
    "odoo-addon-stock_location_lockdown==18.0.*",
    "odoo-addon-stock_location_pending_move==18.0.*",
    "odoo-addon-stock_location_position==18.0.*",
    "odoo-addon-stock_location_tray==18.0.*",
    "odoo-addon-stock_location_zone==18.0.*",
    "odoo-addon-stock_move_common_dest==18.0.*",
    "odoo-addon-stock_move_location==18.0.*",
    "odoo-addon-stock_move_location_purchase_uom==18.0.*",
    "odoo-addon-stock_move_packaging_qty==18.0.*",
    "odoo-addon-stock_move_purchase_uom==18.0.*",
    "odoo-addon-stock_move_reset_quantity==18.0.*",
    "odoo-addon-stock_package_type_volume==18.0.*",
    "odoo-addon-stock_packaging_calculator==18.0.*",
    "odoo-addon-stock_picking_completion_info==18.0.*",
    "odoo-addon-stock_picking_product_assortment==18.0.*",
    "odoo-addon-stock_picking_show_linked==18.0.*",
    "odoo-addon-stock_picking_stage==18.0.*",
    "odoo-addon-stock_picking_supplier_ref==18.0.*",
    "odoo-addon-stock_picking_volume==18.0.*",
    "odoo-addon-stock_picking_volume_packaging==18.0.*",
    "odoo-addon-stock_product_qty_by_packaging==18.0.*",
    "odoo-addon-stock_putaway_product_template==18.0.*",
    "odoo-addon-stock_quant_cost_info==18.0.*",
    "odoo-addon-stock_quant_reservation_info==18.0.*",
    "odoo-addon-stock_quant_reservation_info_mrp==18.0.*",
    "odoo-addon-stock_route_location_source==18.0.*",
    "odoo-addon-stock_route_mto==18.0.*",
    "odoo-addon-stock_secondary_unit==18.0.*",
    "odoo-addon-stock_storage_category_capacity_name==18.0.*",
    "odoo-addon-stock_vertical_lift==18.0.*",
    "odoo-addon-stock_vertical_lift_packaging_level==18.0.*",
    "odoo-addon-stock_vertical_lift_qty_by_packaging==18.0.*",
    "odoo-addon-stock_vertical_lift_server_env==18.0.*",
    "odoo-addon-stock_warehouse_calendar==18.0.*",
    "odoo-addon-stock_warehouse_out_pull==18.0.*",
    "odoo-addon-stock_warehouse_resupply_route_push==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
